# btc-claude-bot-railway

./: .dockerignore  .env.10k.example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  DEVICE_MATRIX.md  Dockerfile  LICENSE  Makefile  README.md  agentkit_provider.py  backend.py  backtester.py  bot_state.py  claude_ai.py  coin_state.py  coinbase_api.py  config.py  convert_video.py  database.py  docker-compose.10k.yml  docker-compose.yml  futures_executor.py  indicators.py  notifications.py  onchain_executor.py  price_feeds.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run.py  run_backend.sh  trade_memory.py  trading_presets.py  watchdog.py
agent/: execution_agent.py
ai/: __init__.py  adversary_agent.py  celery_ai_runner.py  claude_ai.py  claude_schema.py  trade_screenshots.py  vision_feed.py
api/: __init__.py  agentkit_provider.py  binance_api.py  coinbase_api.py  exchange_validate.py  kraken_api.py
billing/: coinbase_handler.py  manual_handler.py  stripe_handler.py
core/: __init__.py  ai_state_builder.py  anthropic_keys.py  auth.py  backend.py  bot_manager.py  bot_state.py  coin_state.py  config.py  database.py  database_postgres.py  encryption.py  json_logging.py  key_resolution.py  readiness_scores.py  redis_client.py  sanitizer.py  shared.py  signal_protocol.py  supabase_client.py  user_config.py  user_database.py
docs/: 10K_PUBLIC_READINESS_RUBRIC.md  ADAPTIVE_STRATEGY_RESEARCH.md  BOTTLENECK_AUDIT.md  BOTTLENECK_FIX_PLAN.md  BOTTLENECK_FIX_RISKS.md  BUSINESS_GMAIL_SETUP.md  DUPLICATE_CLEANUP_PLAN.md  FUTURES_IMPLEMENTATION_PLAN.md  PRODUCTION_CHECKLIST.md  RAILWAY_10K_DEPLOY.md  RAILWAY_VARIABLES.md  RED_TEAM_BLACK_HAT_REPORT.md  RED_TEAM_BOTTLENECK_REPORT.md  RED_TEAM_DATABASE_AUDIT.md  RED_TEAM_REPORT.md  ROT_AUDIT.md  RUBRIC_SCORECARD.md  RUNBOOK.md  SCALING_10K_PLAN.md  STRIPE_SETUP.md
executors/: __init__.py  binance_executor.py  ccxt_executor.py  coinbase_spot_executor.py  futures_executor.py  kraken_executor.py  onchain_executor.py  order_router.py  solver_executor.py
feeds/: __init__.py  news_feeds.py  price_feeds.py
frontend/: .eslintrc.cjs  RESPONSIVENESS_AUDIT.md  capacitor.config.json  index.html  lint-errors-2.txt  lint-errors-3.txt  lint-errors.txt  package-lock.json  package.json  vite.config.js
learning/: __init__.py  coin_scorer.py  memory_compactor.py  meta_reviewer.py  trade_memory.py
safety/: __init__.py  circuit_breaker.py  kya_compliance.py  risk_gate.py  semantic_kill_switch.py  shadow_logger.py
scripts/: APPLY_MIGRATION_INSTRUCTIONS.md  apply_app_tables_migration.py  apply_rls_migration.py  apply_user_tables_migration.py  create_stripe_webhook.py  fetch_supabase_config.py  generate_production_secrets.py  load_test_10k.js  red_team_bottleneck.sh  red_team_bruteforce.sh  redeploy_production.sh  set_railway_cors.sh  setup_paper_ready.sh  smoke_test.sh  stripe_bootstrap.py  stripe_setup.sh  verify_public_ready.sh
strategy/: __init__.py  indicators.py  symbol_registry.py  trading_presets.py
supabase/: README.md
tests/: __init__.py  conftest.py  test_adversary_agent.py  test_ai_state_builder.py  test_anthropic_keys.py  test_api_config.py  test_auth_lookup.py  (+44 more)
(+110 files in other folders)
