[project]
name = "claudebot"
version = "7.0.0"
description = "AI-powered multi-coin trading bot with Claude"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["frontend", "node_modules", "__pycache__", ".git", "backups"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["frontend", "node_modules", "__pycache__", "backups", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

